--- a/views/displayVotes.hbs
+++ b/views/displayVotes.hbs
@@ -7,12 +7,12 @@
 </head>
 
 <body>
-    <canvas id="myChart" width="100px" height="100px"></canvas>
+    <canvas id="myChart" width="100" height="100" style="width:'300px' ; height='400px'"></canvas>
     <script src="../public/Chart.js"></script>
     <script>
         var ctx = document.getElementById("myChart").getContext('2d');
         var myChart = new Chart(ctx, {
-            type: 'doughnut',
+            type: 'bar',
             data: {
                 datasets: [{
                     data: [
@@ -21,9 +21,9 @@
                         30
                     ],
                     backgroundColor: [
-                        "rgb(255, 0, 0)", // red
-                        "rgb(0, 255, 0)", // green
-                        "rgb(0, 0, 255)", //blue
+                        "#8e5ea2", // red
+                        "#3cba9f", // green
+                        "#c45850", //blue
                     ],
                     label: 'A graph'
                 }],
@@ -41,11 +41,10 @@
                 },
                 title: {
                     display: true,
-                    text: 'Doughnut Chart'
+                    text: 'Bar Chart'
                 },
                 animation: {
                     animateScale: true,
-                    animateRotate: true
                 }
             }
         });
