autorefreshing the result page

--- a/views/displayVotes.hbs
+++ b/views/displayVotes.hbs
@@ -1,4 +1,11 @@
 <!DOCTYPE html>
+
+<script type="text/javascript">
+  setTimeout(function() {
+  location.reload();
+}, 1000);
+</script>
+
 <html>
 
 <head>
@@ -32,10 +39,11 @@
                     },
                     title: {
                         display: true,
-                        text: 'Bar Chart'
+                        text: {{{contest}}}
                     },
                     animation: {
-                        animateScale: true,
+                        animateScale: false,
+                        duration: 0
                     },
                 }
             });
