Contest is now passed to display render

--- a/views/displayVotes.hbs
+++ b/views/displayVotes.hbs
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 
+<!---
 <script type="text/javascript">
   setTimeout(function() {
   location.reload();
 }, 1000);
 </script>
+-->
 
 <html>
 
@@ -29,7 +31,7 @@
                             "#8e5ea2", // red
                             "#3cba9f" // green
                         ],
-                        label: ["tell me something","something else"]
+                        label: "what is that?"
                     }]
                 },
                 options: {
@@ -44,7 +46,7 @@
                     animation: {
                         animateScale: false,
                         duration: 0
-                    },
+                    }
                 }
             });
         </script>
