aliging Chartjs import to master

--- a/views/displayVotes.hbs
+++ b/views/displayVotes.hbs
@@ -18,7 +18,7 @@
 <body>
     <div style="display:block; width:1000px ; height:975px; content-box;">
         <canvas id="myChart" width="125" height="100" style="display:block; width:125px ; height:100px;"></canvas>
-        <script src="../public/chart.js"></script>
+        <script src="../public/Chart.js"></script>
         <script>
             var ctx = document.getElementById("myChart").getContext('2d');
             var myChart = new Chart(ctx, {
